--- a/directives.html
+++ b/directives.html
@@ -15,6 +15,19 @@
         <span>number: <span x-text="number"></span>
 
     </div>
+
+
+    <div class="x-for" x-data="{ colors: [
+        { id: 1, label: 'Red' },
+        { id: 2, label: 'Orange' },
+        { id: 3, label: 'Yellow' },
+    ]}">
+        <ul>
+            <template x-for="(item,index) in colors">
+                <li x-text="item.label" :key="index"></li>
+            </template>
+        </ul>
+    </div>
     
 
     <script defer src="https://cdn.jsdelivr.net/npm/alpinejs@3.x.x/dist/cdn.min.js"></script>
